src/test/ui/codemap_tests/issue-28308.stderr
error: cannot apply unary operator `!` to type `&'static str`
  --> $DIR/issue-28308.rs:13:5
   |
13 |     assert!("foo");
   |     ^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro from the standard library

error: aborting due to previous error

